--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 /* TODO: bring top icon more in line with design */
 
+/* TODO: at width 375px stars running out of their container */
+
 /* Reset */
 * {
   box-sizing: border-box;
@@ -26,7 +28,7 @@
     --bg-color-primary: #18181b;
     --bg-color-secondary: #52525a;
     --bg-surrounding: #d4d4d8;
-    --shadow-color: #52525a25;
+    --shadow-color: #52525a4a;
   }
 }
 
@@ -118,7 +120,7 @@ main {
 .cards {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   gap: 2rem;
 }
 
@@ -129,7 +131,8 @@ main {
   box-shadow: 0 30px 200px 0 var(--shadow-color);
   border-radius: 15px;
   padding: 1rem;
-  width: 70%;
+  width: 60%;
+  min-width: 240px;
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
@@ -149,17 +152,17 @@ main {
 }
 
 .card-header-icon {
-  width: 40%;
+  width: 38%;
 }
 
 .card-header-stars {
   display: flex;
   gap: 0.1rem;
-  width: 40%;
+  width: 38%;
 }
 
 .card-header-star {
-  width: 100%;
+  width: 20%;
 }
 
 .google {
@@ -185,8 +188,4 @@ main {
   }
 
   /* Classes */
-  .card {
-    padding: 2.4rem;
-    width: 60%;
-  }
 }
